<resources>
    <string name="app_name">BasicsKotlin</string>
    <string name="splash">Simple Splash</string>
    <string name="music">Music</string>
    <string name="animated_splash_screen">Animated Splash Screen</string>
    <string name="Simple_Calculator">Simple Calculator</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplicaion</string>
    <string name="division">Division</string>
    <string name="recyclerview">RecyclerView</string>
</resources>