<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="4"
            tools:context=".GridXMLActivity"
            android:padding="30sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/splashButton"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="start|top"
                android:text="@string/splash"
                />
            <Button
                android:id="@+id/animatedSplashButton"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="end|top"
                android:text="@string/animated_splash_screen"/>

            <Button
                android:id="@+id/simpleCalculator"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="start|top"
                android:text="@string/Simple_Calculator"/>

            <Button
                android:id="@+id/recyclerView"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end|top"
                android:text="@string/recyclerview"/>

        </GridLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>