<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Simple_Calculator"
    android:padding="20sp">

    <EditText
        android:id="@+id/num1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="number"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/add"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/addition"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/sub"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/subtraction"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/mul"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/multiplication"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/div"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/division"
        android:textSize="20sp"/>



</LinearLayout>